2000-08-12  Neil Jerram  <neil@ossau.uklinux.net>

	* docstring.el (c-doc-string-replace): Where a docstring contains
	blank lines, compress the C source representation by combining
	adjacent newline characters.
	(query-sync-next-doc-string): Use "@end deffn" to find end of
	docstring rather than superfluous "@c docstring end".

2000-08-11  Neil Jerram  <neil@ossau.uklinux.net>

	* docstring.el: New file - Emacs Lisp code for synchronizing
	docstrings between the libguile C source and the reference manual.
	(query-sync-doc-strings): Use non-error based mechanism for the
	link between query-sync-doc-strings and query-sync-next-doc-string
	so that other errors that occur deep within
	query-sync-next-doc-string are not hidden.
	(query-sync-next-doc-string): Actually update MD5 digest when
	docstrings already match.
	(c-doc-string-data): Search backwards for "^SCM_DEFINE" rather
	than "SCM_DEFINE" to avoid getting confused by primitives whose C
	name is "scm_define...".
	(c-doc-string-data): Remove whitespace inside brackets around
	optional arguments.
	(c-doc-string-data): Clarify error message when a procedure cannot
	be found in the expected file.
	
